<resources>
    <!--
   Create by
   M. Fahmi Amaruddin
   (19.11.3008)
   -->
    <string name="app_name">CounterandScrollText</string>
    <string name="click_me">Click Me!</string>
    <string name="reset">Reset</string>
    <string name="artikel_title">Manfaat Bacaan Tasbih dan Keutamaannya</string>
    <string name="artikel_kontent">
        Salah satu sifat orang mukmin adalah senantiasa bertasbih. Karena itu, manfaat bacaan tasbih sangat banyak dan melebihi apa yang ada dalam benak manusia. Berikut uraian mengenai amalan bacaan tasbih dan keutamaannya apabila dilakukan, mengutip Jurnal Tafsere UIN Alauddin Makassar oleh A. Fahrani;
\n\n
<b>1. Membuat Hati Gembira, Senang, dan Tenang (Tenteram)</b>
\n
Bacaan tasbih dapat membuat hati menusia menjadi gembira, senang dan tenteram. Allah SWT berfirman dalam QS. Ṭaha/20: 130 yang berbunyi; "Maka sabarlah kamu atas apa yang mereka katakan, dan bertasbihlah dengan memuji Tuhanmu, sebelum terbit matahari dan sebelum terbenamnya dan bertasbih pulalah pada waktu-waktu di malam hari dan pada waktu-waktu di siang hari, supaya kamu merasa senang."

Setelah Allah SWT memerintahkan Nabi SAW untuk bersabar atas pendustaan orang-orang kafir terhadap ajaran beliau dan cemoohan mereka terhadap beliau dan para pengikutnya, diikuti dengan perintah bertasbih, menyucikan Allah dari segala yang tidak wajar bagi-Nya, akhir dari ayat ini menyebutkan la`allaka tarḍā (supaya engkau rida) yakni merasa tenang, senang dan puas apapun yang terjadi atas dirimu dan pengikutmu.
\n\n
<b>2. Mendatangkan Rahmat Allah, Terbebas dari Kegelapan Hidup, dan akan Mendatangkan Pahala di Dunia dan Akhirat</b>
\n
Melafazkan bacaan tasbih juga mampu mendatangkan rahmat, membuat hidup manusia terbebas dari kegelapan dan mendatangkan pahala baginya. Allah swt.berfirman dalam QS. al-Aḥzab/33: 41-44 yang berbunyi; "Wahai orang-orang yang beriman, ingatlah kepada Allah, dengan mengingat (nama-Nya) sebanyak-banyaknya, dan bertasbihlah kepada-Nya pada waktu pagi dan petang.Dialah yang memberi rahmat kepadamu dan para malaikat (memohonkan ampunan untukmu), agar Dia mengeluarkan kamu dari kegelapan kepada cahaya (yang terang).Dan Dia Maha Penyayang kepada orang-orang yang beriman.Salam penghormatan kepada mereka (orang-orang mukmin itu) pada hari mereka menemui-Nya ialah: Salām; dan Dia menyediakan pahala yang mulia bagi mereka."
        Fungsi bertasbih pada rangkaian ayat di atas adalah akan mendatangkan rahmat Allah swt.dan curahan rahmat-Nya itu akan berlanjut hingga hari kiamat. Selain rahmat yang Allah curahkan, ayat di atas juga menyebutkan fungsi bertasbih lainnya adalah akan didoakan oleh malaikat-Nya, dan doa malaikat pasti dikabulkan Allah.
\n\n
<b>3. Sebagai Doa</b>
\n
Lafaz bacaan tasbih juga bermanfaat sebagai doa. Allah swt.Berfirman dalam QS. al-Anbiya’/21: 87-88 yang berbunyi; "Dan (ingatlah kisah) Żun Nūn (Yūnus), ketika ia pergi dalam keadaan marah, lalu ia menyangka bahwa Kami tidak akan menyulitkannya, maka ia berdoa dalam keadaan yang sangat gelap: "Tidak ada tuhan selain Engkau. Maha Suci Engkau, sungguh aku termasuk orang-orang yang zalim." Maka Kami kabulkan (doa)nya dan Kami selamatkan dia dari kedukaan. Dan demikianlah Kami selamatkan orang-orang yang beriman."
    </string>
    <string name="create_by_m_fahmi_amaruddin">Create by  \n M. Fahmi Amaruddin \n (19.11.3008)</string>
    <string name="mulailah_bertasbih">Mulailah Bertasbih</string>
</resources>