<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--
      Create by
      M. Fahmi Amaruddin
      (19.11.3008)
      -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/artikel_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/artikel_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/artikel_konten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:autoLink="web"
                android:lineSpacingExtra="5sp"
                android:textColor="@color/black"
                android:padding="20sp"
                android:text="@string/artikel_kontent" />

            <TextView
                android:id="@+id/tasbih"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/mulailah_bertasbih"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/create_by_m_fahmi_amaruddin"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtcount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="0"
                android:textAlignment="center"
                android:textSize="100sp" />

            <Button
                android:id="@+id/btncount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="btnplus"
                android:textSize="35sp"
                android:text="@string/click_me"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnreset"
                android:text="@string/reset"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>